# Log2FileLib

./: CMakeLists.txt  LICENSE  README.md  log2file.cpp  log2file.hpp
test/: test.cpp
